# TestTaskConvulation

./: CMakeLists.txt  GenerateSignal.m  Makefile  README.md  SignalGenerator.m  filter.cpp  filter.h  main.cpp  run.sh
+IntMath/: Corr32.m  PhaseRotator.m  RoundNear16.m  RoundNear32.m
